Add dependencies and properties for data access

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:autoservicio
+spring.datasource.username=SELLER
+spring.datasource.password=future21
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
