--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Aplicacion web para Punto de Venta</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<spring.restdocs.version>2.0.5.RELEASE</spring.restdocs.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -67,6 +68,7 @@
 		<dependency>
 			<groupId>org.springframework.restdocs</groupId>
 			<artifactId>spring-restdocs-mockmvc</artifactId>
+			<version>${spring.restdocs.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -77,6 +79,31 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin> 
+			<groupId>org.asciidoctor</groupId>
+			<artifactId>asciidoctor-maven-plugin</artifactId>
+			<version>1.5.8</version>
+			<executions>
+				<execution>
+					<id>generate-docs</id>
+					<phase>prepare-package</phase> 
+					<goals>
+						<goal>process-asciidoc</goal>
+					</goals>
+					<configuration>
+						<backend>html</backend>
+						<doctype>book</doctype>
+					</configuration>
+				</execution>
+			</executions>
+			<dependencies>
+				<dependency> 
+					<groupId>org.springframework.restdocs</groupId>
+					<artifactId>spring-restdocs-asciidoctor</artifactId>
+					<version>${spring.restdocs.version}</version>
+				</dependency>
+			</dependencies>
+		</plugin>
 		</plugins>
 	</build>
 
